src/wrap/iio.h

typedef ptrdiff_t ssize_t;
struct iio_device;
struct iio_channel;
struct iio_buffer;
enum iio_chan_type {
	IIO_VOLTAGE,
	IIO_CURRENT,
	IIO_POWER,
	IIO_ACCEL,
	IIO_ANGL_VEL,
	IIO_MAGN,
	IIO_LIGHT,
	IIO_INTENSITY,
	IIO_PROXIMITY,
	IIO_TEMP,
	IIO_INCLI,
	IIO_ROT,
	IIO_ANGL,
	IIO_TIMESTAMP,
	IIO_CAPACITANCE,
	IIO_ALTVOLTAGE,
	IIO_CCT,
	IIO_PRESSURE,
	IIO_HUMIDITYRELATIVE,
	IIO_ACTIVITY,
	IIO_STEPS,
	IIO_ENERGY,
	IIO_DISTANCE,
	IIO_VELOCITY,
	IIO_CONCENTRATION,
	IIO_RESISTANCE,
	IIO_PH,
	IIO_UVINDEX,
	IIO_ELECTRICALCONDUCTIVITY,
	IIO_COUNT,
	IIO_INDEX,
	IIO_GRAVITY,
	IIO_POSITIONRELATIVE,
	IIO_PHASE,
	IIO_MASSCONCENTRATION,
	IIO_CHAN_TYPE_UNKNOWN = INT_MAX
};
enum iio_modifier {
	IIO_NO_MOD,
	IIO_MOD_X,
	IIO_MOD_Y,
	IIO_MOD_Z,
	IIO_MOD_X_AND_Y,
	IIO_MOD_X_AND_Z,
	IIO_MOD_Y_AND_Z,
	IIO_MOD_X_AND_Y_AND_Z,
	IIO_MOD_X_OR_Y,
	IIO_MOD_X_OR_Z,
	IIO_MOD_Y_OR_Z,
	IIO_MOD_X_OR_Y_OR_Z,
	IIO_MOD_LIGHT_BOTH,
	IIO_MOD_LIGHT_IR,
	IIO_MOD_ROOT_SUM_SQUARED_X_Y,
	IIO_MOD_SUM_SQUARED_X_Y_Z,
	IIO_MOD_LIGHT_CLEAR,
	IIO_MOD_LIGHT_RED,
	IIO_MOD_LIGHT_GREEN,
	IIO_MOD_LIGHT_BLUE,
	IIO_MOD_QUATERNION,
	IIO_MOD_TEMP_AMBIENT,
	IIO_MOD_TEMP_OBJECT,
	IIO_MOD_NORTH_MAGN,
	IIO_MOD_NORTH_TRUE,
	IIO_MOD_NORTH_MAGN_TILT_COMP,
	IIO_MOD_NORTH_TRUE_TILT_COMP,
	IIO_MOD_RUNNING,
	IIO_MOD_JOGGING,
	IIO_MOD_WALKING,
	IIO_MOD_STILL,
	IIO_MOD_ROOT_SUM_SQUARED_X_Y_Z,
	IIO_MOD_I,
	IIO_MOD_Q,
	IIO_MOD_CO2,
	IIO_MOD_VOC,
	IIO_MOD_LIGHT_UV,
	IIO_MOD_LIGHT_DUV,
	IIO_MOD_PM1,
	IIO_MOD_PM2P5,
	IIO_MOD_PM4,
	IIO_MOD_PM10,
	IIO_MOD_ETHANOL,
	IIO_MOD_H2,
	IIO_MOD_O2,
};
__api __check_ret int iio_device_attr_read_all(struct iio_device *dev,
		int (*cb)(struct iio_device *dev, const char *attr,
			const char *value, size_t len, void *d),
		void *data);
__api __check_ret int iio_device_attr_write_all(struct iio_device *dev,
		ssize_t (*cb)(struct iio_device *dev,
			const char *attr, void *buf, size_t len, void *d),
		void *data);
__api __check_ret int iio_device_buffer_attr_read_all(struct iio_device *dev,
		int (*cb)(struct iio_device *dev, const char *attr,
			const char *value, size_t len, void *d),
		void *data);
__api __check_ret int iio_device_buffer_attr_write_all(struct iio_device *dev,
		ssize_t (*cb)(struct iio_device *dev,
			const char *attr, void *buf, size_t len, void *d),
		void *data);
__api __check_ret __pure const char * iio_channel_get_attr(
		const struct iio_channel *chn, unsigned int index);
__api __check_ret __pure const char * iio_channel_find_attr(
		const struct iio_channel *chn, const char *name);
__api __check_ret __pure const char * iio_channel_attr_get_filename(
		const struct iio_channel *chn, const char *attr);
__api __check_ret ssize_t iio_channel_attr_read(const struct iio_channel *chn,
		const char *attr, char *dst, size_t len);
__api __check_ret int iio_channel_attr_read_all(struct iio_channel *chn,
		int (*cb)(struct iio_channel *chn,
			const char *attr, const char *val, size_t len, void *d),
		void *data);
__api __check_ret int iio_channel_attr_read_bool(const struct iio_channel *chn,
		const char *attr, bool *val);
__api __check_ret int iio_channel_attr_read_longlong(const struct iio_channel *chn,
		const char *attr, long long *val);
__api __check_ret int iio_channel_attr_read_double(const struct iio_channel *chn,
		const char *attr, double *val);
__api __check_ret ssize_t iio_channel_attr_write(const struct iio_channel *chn,
		const char *attr, const char *src);
__api __check_ret ssize_t iio_channel_attr_write_raw(const struct iio_channel *chn,
		const char *attr, const void *src, size_t len);
__api __check_ret int iio_channel_attr_write_all(struct iio_channel *chn,
		ssize_t (*cb)(struct iio_channel *chn,
			const char *attr, void *buf, size_t len, void *d),
		void *data);
__api __check_ret int iio_channel_attr_write_bool(const struct iio_channel *chn,
		const char *attr, bool val);
__api __check_ret int iio_channel_attr_write_longlong(const struct iio_channel *chn,
		const char *attr, long long val);
__api __check_ret int iio_channel_attr_write_double(const struct iio_channel *chn,
		const char *attr, double val);
__api void iio_channel_enable(struct iio_channel *chn);
__api void iio_channel_disable(struct iio_channel *chn);
__api __check_ret bool iio_channel_is_enabled(const struct iio_channel *chn);
__api __check_ret size_t iio_channel_read_raw(const struct iio_channel *chn,
		struct iio_buffer *buffer, void *dst, size_t len);
__api __check_ret size_t iio_channel_read(const struct iio_channel *chn,
		struct iio_buffer *buffer, void *dst, size_t len);
__api __check_ret size_t iio_channel_write_raw(const struct iio_channel *chn,
		struct iio_buffer *buffer, const void *src, size_t len);
__api __check_ret size_t iio_channel_write(const struct iio_channel *chn,
		struct iio_buffer *buffer, const void *src, size_t len);
__api void iio_channel_set_data(struct iio_channel *chn, void *data);
__api void * iio_channel_get_data(const struct iio_channel *chn);
__api __check_ret __pure enum iio_chan_type iio_channel_get_type(
		const struct iio_channel *chn);
__api __check_ret __pure enum iio_modifier iio_channel_get_modifier(
		const struct iio_channel *chn);
__api __check_ret __pure const struct iio_device * iio_buffer_get_device(
		const struct iio_buffer *buf);
__api __check_ret struct iio_buffer * iio_device_create_buffer(const struct iio_device *dev,
		size_t samples_count, bool cyclic);
__api void iio_buffer_destroy(struct iio_buffer *buf);
__api __check_ret int iio_buffer_get_poll_fd(struct iio_buffer *buf);
__api __check_ret int iio_buffer_set_blocking_mode(struct iio_buffer *buf, bool blocking);
__api __check_ret ssize_t iio_buffer_refill(struct iio_buffer *buf);
__api __check_ret ssize_t iio_buffer_push(struct iio_buffer *buf);
__api __check_ret ssize_t iio_buffer_push_partial(struct iio_buffer *buf,
		size_t samples_count);
__api void iio_buffer_cancel(struct iio_buffer *buf);
__api void * iio_buffer_start(const struct iio_buffer *buf);
__api void * iio_buffer_first(const struct iio_buffer *buf,
		const struct iio_channel *chn);
__api __check_ret ptrdiff_t iio_buffer_step(const struct iio_buffer *buf);
__api void * iio_buffer_end(const struct iio_buffer *buf);
__api __check_ret ssize_t iio_buffer_foreach_sample(struct iio_buffer *buf,
		ssize_t (*callback)(const struct iio_channel *chn,
			void *src, size_t bytes, void *d), void *data);
__api void iio_buffer_set_data(struct iio_buffer *buf, void *data);
__api void * iio_buffer_get_data(const struct iio_buffer *buf);
struct iio_data_format {
	unsigned int length;
	unsigned int bits;
	unsigned int shift;
	bool is_signed;
	bool is_fully_defined;
	bool is_be;
	bool with_scale;
	double scale;
	unsigned int repeat;
};
__api __check_ret ssize_t iio_device_get_sample_size(const struct iio_device *dev);
__api __check_ret __pure long iio_channel_get_index(const struct iio_channel *chn);
__api __check_ret __cnst const struct iio_data_format * iio_channel_get_data_format(
		const struct iio_channel *chn);
__api void iio_channel_convert(const struct iio_channel *chn,
		void *dst, const void *src);
__api void iio_channel_convert_inverse(const struct iio_channel *chn,
		void *dst, const void *src);
__api __check_ret __pure unsigned int iio_device_get_debug_attrs_count(
		const struct iio_device *dev);
__api __check_ret __pure const char * iio_device_get_debug_attr(
		const struct iio_device *dev, unsigned int index);
__api __check_ret __pure const char * iio_device_find_debug_attr(
		const struct iio_device *dev, const char *name);
__api __check_ret ssize_t iio_device_debug_attr_read(const struct iio_device *dev,
		const char *attr, char *dst, size_t len);
__api __check_ret int iio_device_debug_attr_read_all(struct iio_device *dev,
		int (*cb)(struct iio_device *dev, const char *attr,
			const char *value, size_t len, void *d),
		void *data);
__api __check_ret ssize_t iio_device_debug_attr_write(const struct iio_device *dev,
		const char *attr, const char *src);
__api __check_ret ssize_t iio_device_debug_attr_write_raw(const struct iio_device *dev,
		const char *attr, const void *src, size_t len);
__api __check_ret int iio_device_debug_attr_write_all(struct iio_device *dev,
		ssize_t (*cb)(struct iio_device *dev,
			const char *attr, void *buf, size_t len, void *d),
		void *data);
__api __check_ret int iio_device_debug_attr_read_bool(const struct iio_device *dev,
		const char *attr, bool *val);
__api __check_ret int iio_device_debug_attr_read_longlong(const struct iio_device *dev,
		const char *attr, long long *val);
__api __check_ret int iio_device_debug_attr_read_double(const struct iio_device *dev,
		const char *attr, double *val);
__api __check_ret int iio_device_debug_attr_write_bool(const struct iio_device *dev,
		const char *attr, bool val);
__api __check_ret int iio_device_debug_attr_write_longlong(const struct iio_device *dev,
		const char *attr, long long val);
__api __check_ret int iio_device_debug_attr_write_double(const struct iio_device *dev,
		const char *attr, double val);
__api __check_ret int iio_device_identify_filename(const struct iio_device *dev,
		const char *filename, struct iio_channel **chn,
		const char **attr);
__api __check_ret int iio_device_reg_write(struct iio_device *dev,
		uint32_t address, uint32_t value);
__api __check_ret int iio_device_reg_read(struct iio_device *dev,
		uint32_t address, uint32_t *value);