src/libiio_api.jl


function iio_channel_get_attr(chn, index)
    ccall((:iio_channel_get_attr, libiio), Cstring, (Ptr{iio_channel}, UInt32), chn, index)
end

function iio_channel_find_attr(chn, name)
    ccall((:iio_channel_find_attr, libiio), Cstring, (Ptr{iio_channel}, Cstring), chn, name)
end

function iio_channel_attr_get_filename(chn, attr)
    ccall((:iio_channel_attr_get_filename, libiio), Cstring, (Ptr{iio_channel}, Cstring), chn, attr)
end

function iio_channel_attr_read(chn, attr, dst, len)
    ccall((:iio_channel_attr_read, libiio), ssize_t, (Ptr{iio_channel}, Cstring, Cstring, Csize_t), chn, attr, dst, len)
end

function iio_channel_attr_read_all(chn, cb, data)
    ccall((:iio_channel_attr_read_all, libiio), Cint, (Ptr{iio_channel}, Ptr{Cvoid}, Ptr{Cvoid}), chn, cb, data)
end

function iio_channel_attr_read_bool(chn, attr, val)
    ccall((:iio_channel_attr_read_bool, libiio), Cint, (Ptr{iio_channel}, Cstring, Ptr{Bool}), chn, attr, val)
end

function iio_channel_attr_read_longlong(chn, attr, val)
    ccall((:iio_channel_attr_read_longlong, libiio), Cint, (Ptr{iio_channel}, Cstring, Ptr{Clonglong}), chn, attr, val)
end

function iio_channel_attr_read_double(chn, attr, val)
    ccall((:iio_channel_attr_read_double, libiio), Cint, (Ptr{iio_channel}, Cstring, Ptr{Cdouble}), chn, attr, val)
end

function iio_channel_attr_write(chn, attr, src)
    ccall((:iio_channel_attr_write, libiio), ssize_t, (Ptr{iio_channel}, Cstring, Cstring), chn, attr, src)
end

function iio_channel_attr_write_raw(chn, attr, src, len)
    ccall((:iio_channel_attr_write_raw, libiio), ssize_t, (Ptr{iio_channel}, Cstring, Ptr{Cvoid}, Csize_t), chn, attr, src, len)
end

function iio_channel_attr_write_all(chn, cb, data)
    ccall((:iio_channel_attr_write_all, libiio), Cint, (Ptr{iio_channel}, Ptr{Cvoid}, Ptr{Cvoid}), chn, cb, data)
end

function iio_channel_attr_write_bool(chn, attr, val)
    ccall((:iio_channel_attr_write_bool, libiio), Cint, (Ptr{iio_channel}, Cstring, Bool), chn, attr, val)
end

function iio_channel_attr_write_longlong(chn, attr, val)
    ccall((:iio_channel_attr_write_longlong, libiio), Cint, (Ptr{iio_channel}, Cstring, Clonglong), chn, attr, val)
end

function iio_channel_attr_write_double(chn, attr, val)
    ccall((:iio_channel_attr_write_double, libiio), Cint, (Ptr{iio_channel}, Cstring, Cdouble), chn, attr, val)
end

function iio_channel_enable(chn)
    ccall((:iio_channel_enable, libiio), Cvoid, (Ptr{iio_channel},), chn)
end

function iio_channel_disable(chn)
    ccall((:iio_channel_disable, libiio), Cvoid, (Ptr{iio_channel},), chn)
end

function iio_channel_is_enabled(chn)
    ccall((:iio_channel_is_enabled, libiio), Bool, (Ptr{iio_channel},), chn)
end

function iio_channel_read_raw(chn, buffer, dst, len)
    ccall((:iio_channel_read_raw, libiio), Csize_t, (Ptr{iio_channel}, Ptr{iio_buffer}, Ptr{Cvoid}, Csize_t), chn, buffer, dst, len)
end

function iio_channel_read(chn, buffer, dst, len)
    ccall((:iio_channel_read, libiio), Csize_t, (Ptr{iio_channel}, Ptr{iio_buffer}, Ptr{Cvoid}, Csize_t), chn, buffer, dst, len)
end

function iio_channel_write_raw(chn, buffer, src, len)
    ccall((:iio_channel_write_raw, libiio), Csize_t, (Ptr{iio_channel}, Ptr{iio_buffer}, Ptr{Cvoid}, Csize_t), chn, buffer, src, len)
end

function iio_channel_write(chn, buffer, src, len)
    ccall((:iio_channel_write, libiio), Csize_t, (Ptr{iio_channel}, Ptr{iio_buffer}, Ptr{Cvoid}, Csize_t), chn, buffer, src, len)
end

function iio_channel_set_data(chn, data)
    ccall((:iio_channel_set_data, libiio), Cvoid, (Ptr{iio_channel}, Ptr{Cvoid}), chn, data)
end

function iio_channel_get_data(chn)
    ccall((:iio_channel_get_data, libiio), Ptr{Cvoid}, (Ptr{iio_channel},), chn)
end

function iio_channel_get_type(chn)
    ccall((:iio_channel_get_type, libiio), iio_chan_type, (Ptr{iio_channel},), chn)
end

function iio_channel_get_modifier(chn)
    ccall((:iio_channel_get_modifier, libiio), iio_modifier, (Ptr{iio_channel},), chn)
end

function iio_buffer_get_device(buf)
    ccall((:iio_buffer_get_device, libiio), Ptr{iio_device}, (Ptr{iio_buffer},), buf)
end

function iio_device_create_buffer(dev, samples_count, cyclic)
    ccall((:iio_device_create_buffer, libiio), Ptr{iio_buffer}, (Ptr{iio_device}, Csize_t, Bool), dev, samples_count, cyclic)
end

function iio_buffer_destroy(buf)
    ccall((:iio_buffer_destroy, libiio), Cvoid, (Ptr{iio_buffer},), buf)
end

function iio_buffer_get_poll_fd(buf)
    ccall((:iio_buffer_get_poll_fd, libiio), Cint, (Ptr{iio_buffer},), buf)
end

function iio_buffer_set_blocking_mode(buf, blocking)
    ccall((:iio_buffer_set_blocking_mode, libiio), Cint, (Ptr{iio_buffer}, Bool), buf, blocking)
end

function iio_buffer_refill(buf)
    ccall((:iio_buffer_refill, libiio), ssize_t, (Ptr{iio_buffer},), buf)
end

function iio_buffer_push(buf)
    ccall((:iio_buffer_push, libiio), ssize_t, (Ptr{iio_buffer},), buf)
end

function iio_buffer_push_partial(buf, samples_count)
    ccall((:iio_buffer_push_partial, libiio), ssize_t, (Ptr{iio_buffer}, Csize_t), buf, samples_count)
end

function iio_buffer_cancel(buf)
    ccall((:iio_buffer_cancel, libiio), Cvoid, (Ptr{iio_buffer},), buf)
end

function iio_buffer_start(buf)
    ccall((:iio_buffer_start, libiio), Ptr{Cvoid}, (Ptr{iio_buffer},), buf)
end

function iio_buffer_first(buf, chn)
    ccall((:iio_buffer_first, libiio), Ptr{Cvoid}, (Ptr{iio_buffer}, Ptr{iio_channel}), buf, chn)
end

function iio_buffer_step(buf)
    ccall((:iio_buffer_step, libiio), Cptrdiff_t, (Ptr{iio_buffer},), buf)
end

function iio_buffer_end(buf)
    ccall((:iio_buffer_end, libiio), Ptr{Cvoid}, (Ptr{iio_buffer},), buf)
end

function iio_buffer_foreach_sample(buf, callback, data)
    ccall((:iio_buffer_foreach_sample, libiio), ssize_t, (Ptr{iio_buffer}, Ptr{Cvoid}, Ptr{Cvoid}), buf, callback, data)
end

function iio_buffer_set_data(buf, data)
    ccall((:iio_buffer_set_data, libiio), Cvoid, (Ptr{iio_buffer}, Ptr{Cvoid}), buf, data)
end

function iio_buffer_get_data(buf)
    ccall((:iio_buffer_get_data, libiio), Ptr{Cvoid}, (Ptr{iio_buffer},), buf)
end

function iio_device_get_sample_size(dev)
    ccall((:iio_device_get_sample_size, libiio), ssize_t, (Ptr{iio_device},), dev)
end

function iio_channel_get_index(chn)
    ccall((:iio_channel_get_index, libiio), Clong, (Ptr{iio_channel},), chn)
end

function iio_channel_get_data_format(chn)
    ccall((:iio_channel_get_data_format, libiio), Ptr{iio_data_format}, (Ptr{iio_channel},), chn)
end

function iio_channel_convert(chn, dst, src)
    ccall((:iio_channel_convert, libiio), Cvoid, (Ptr{iio_channel}, Ptr{Cvoid}, Ptr{Cvoid}), chn, dst, src)
end

function iio_channel_convert_inverse(chn, dst, src)
    ccall((:iio_channel_convert_inverse, libiio), Cvoid, (Ptr{iio_channel}, Ptr{Cvoid}, Ptr{Cvoid}), chn, dst, src)
end

function iio_device_get_debug_attrs_count(dev)
    ccall((:iio_device_get_debug_attrs_count, libiio), UInt32, (Ptr{iio_device},), dev)
end

function iio_device_get_debug_attr(dev, index)
    ccall((:iio_device_get_debug_attr, libiio), Cstring, (Ptr{iio_device}, UInt32), dev, index)
end

function iio_device_find_debug_attr(dev, name)
    ccall((:iio_device_find_debug_attr, libiio), Cstring, (Ptr{iio_device}, Cstring), dev, name)
end

function iio_device_debug_attr_read(dev, attr, dst, len)
    ccall((:iio_device_debug_attr_read, libiio), ssize_t, (Ptr{iio_device}, Cstring, Cstring, Csize_t), dev, attr, dst, len)
end

function iio_device_debug_attr_read_all(dev, cb, data)
    ccall((:iio_device_debug_attr_read_all, libiio), Cint, (Ptr{iio_device}, Ptr{Cvoid}, Ptr{Cvoid}), dev, cb, data)
end

function iio_device_debug_attr_write(dev, attr, src)
    ccall((:iio_device_debug_attr_write, libiio), ssize_t, (Ptr{iio_device}, Cstring, Cstring), dev, attr, src)
end

function iio_device_debug_attr_write_raw(dev, attr, src, len)
    ccall((:iio_device_debug_attr_write_raw, libiio), ssize_t, (Ptr{iio_device}, Cstring, Ptr{Cvoid}, Csize_t), dev, attr, src, len)
end

function iio_device_debug_attr_write_all(dev, cb, data)
    ccall((:iio_device_debug_attr_write_all, libiio), Cint, (Ptr{iio_device}, Ptr{Cvoid}, Ptr{Cvoid}), dev, cb, data)
end

function iio_device_debug_attr_read_bool(dev, attr, val)
    ccall((:iio_device_debug_attr_read_bool, libiio), Cint, (Ptr{iio_device}, Cstring, Ptr{Bool}), dev, attr, val)
end

function iio_device_debug_attr_read_longlong(dev, attr, val)
    ccall((:iio_device_debug_attr_read_longlong, libiio), Cint, (Ptr{iio_device}, Cstring, Ptr{Clonglong}), dev, attr, val)
end

function iio_device_debug_attr_read_double(dev, attr, val)
    ccall((:iio_device_debug_attr_read_double, libiio), Cint, (Ptr{iio_device}, Cstring, Ptr{Cdouble}), dev, attr, val)
end

function iio_device_debug_attr_write_bool(dev, attr, val)
    ccall((:iio_device_debug_attr_write_bool, libiio), Cint, (Ptr{iio_device}, Cstring, Bool), dev, attr, val)
end

function iio_device_debug_attr_write_longlong(dev, attr, val)
    ccall((:iio_device_debug_attr_write_longlong, libiio), Cint, (Ptr{iio_device}, Cstring, Clonglong), dev, attr, val)
end

function iio_device_debug_attr_write_double(dev, attr, val)
    ccall((:iio_device_debug_attr_write_double, libiio), Cint, (Ptr{iio_device}, Cstring, Cdouble), dev, attr, val)
end

function iio_device_identify_filename(dev, filename, chn, attr)
    ccall((:iio_device_identify_filename, libiio), Cint, (Ptr{iio_device}, Cstring, Ptr{Ptr{iio_channel}}, Ptr{Cstring}), dev, filename, chn, attr)
end

function iio_device_reg_write(dev, address, value)
    ccall((:iio_device_reg_write, libiio), Cint, (Ptr{iio_device}, UInt32, UInt32), dev, address, value)
end

function iio_device_reg_read(dev, address, value)
    ccall((:iio_device_reg_read, libiio), Cint, (Ptr{iio_device}, UInt32, Ptr{UInt32}), dev, address, value)
end
